# plugboard

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: release.yml
assets/: app.css  app.js  csrf.js
src/: assets_route.rs  auth.rs  config.rs  error.rs  fleet.rs  history.rs  lib.rs  main.rs  metrics.rs  ops.rs  poller.rs  redact.rs  state.rs  updates.rs
src/routes/: admin.rs  auth.rs  dashboard.rs  device.rs  discover.rs  events.rs  mod.rs  settings.rs
src/views/: components.rs  dashboard.rs  device.rs  discover.rs  layout.rs  login.rs  mod.rs  settings.rs
tests/: admin.rs  auth.rs  control.rs  csrf.rs  dashboard.rs  discover.rs  metrics.rs  poll.rs  settings.rs  smoke.rs  updates.rs
