[package]
name = "tasmota-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Unofficial web dashboard and admin for Tasmota smart devices."
authors = ["Ruben J. Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/tasmota-web"
homepage = "https://github.com/rvben/tasmota-web"
keywords = ["tasmota", "smart-home", "iot", "dashboard", "web"]
categories = ["web-programming"]
readme = "README.md"

[lib]
name = "tasmota_web"
path = "src/lib.rs"

[[bin]]
name = "tasmota-web"
path = "src/main.rs"

[dependencies]
tasmota-core = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
maud = { version = "0.26", features = ["axum"] }
tower-sessions = "0.13"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
