[package]
name = "plugboard"
version = "0.2.1"
edition = "2024"
rust-version = "1.90"
description = "Unofficial web dashboard and admin for Tasmota and Shelly smart devices."
authors = ["Ruben J. Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/plugboard"
homepage = "https://github.com/rvben/plugboard"
keywords = ["shelly", "tasmota", "smart-home", "iot", "dashboard"]
categories = ["web-programming"]
readme = "README.md"

[lib]
name = "plugboard"
path = "src/lib.rs"

[[bin]]
name = "plugboard"
path = "src/main.rs"

[dependencies]
tasmota-core = "0.2"
switchkit = "0.2"
shelly-core = "0.2"
async-trait = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
maud = { version = "0.26", features = ["axum"] }
tower-sessions = "0.13"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
